chromeos: stop adding localhost to proxy bypass rules

On ChromeOS, when a manual proxy config is set up (as is done in the
Telemetry blink_perf benchmarks), localhost is automatically added to
the proxy bypass rules, meaning requests to localhost do not hit the
proxy server.

This has caused blink_perf benchmarks on Telemetry to be broken (but
only on ChromeOS) since they made a change in
85e79ec2557c6189b556cf64b438dc8f1af7d0ac of third_party/catapult, which
forced the ts_proxy to be used for hosting the benchmarks. Therefore,
this CL fixes the behaviour of Chrome-on-ChromeOS to match the behaviour
of Chrome on other OSes.

In fact, this affects any benchmark that is hosted using a 'file://' URL
in telemetry: startup.cold.blank_page, blink_perf.*, speedometer2, etc.

This CL also adjusts the unittests associated with ChromeOS now that
localhost isn't bypassed by default, and enables another unittest for
ChromeOS that was previously disabled due to this behaviour.

BUG=664196
TEST=on ChromeOS, run the 'speedometer2' benchmark with Telemetry,
     and notice that the device reports that it could not connect to
     localhost.  After applying the patch, it should now work.

Change-Id: I3d5274f01aa404b93274f87a343bf7c5004ad8ba